# purecrypto

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md
.claude/: FINAL_REPORT.txt
.github/workflows/: ci.yml  fuzz.yml  legacy-tls-interop.yml  pages.yml  release-binaries.yml  release-plz.yml
docs/: benchmarks.md  recommended-usage.md  threat-model.md  validation.md
docs/design/: threshold-primitives.md
examples/: bench.rs  pss_interop.rs  selfsigned_cert.rs  tls_ech_loopback.rs  tls_external_signing.rs  tls_get.rs  tls_legacy_interop.rs  tls_loopback.rs  tls_private_key_driven.rs
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/fuzz_targets/: cert_decompress.rs  der_reader.rs  dh_share.rs  dtls_client_feed.rs  dtls_server_feed.rs  ecdsa_sig_der.rs  ech_config_list.rs  ech_extension.rs  ech_retry_configs.rs  lms_parse.rs  mlkem_pkcs8.rs  ocsp_response.rs  pbes2_decrypt.rs  pem_decode.rs  pkcs8_ed25519.rs  pkcs8_mldsa.rs  pkcs8_rsa.rs  pkcs8_slhdsa.rs  quic_client_feed.rs  quic_server_feed.rs  quic_transport_params.rs  spki_pubkey.rs  tls_client_feed.rs  tls_legacy_feed.rs  tls_server_feed.rs  x509_certificate.rs  x509_crl.rs  x509_csr.rs  xmss_parse.rs
include/: purecrypto.h
src/: lib.rs  signature_registry.rs
src/ascon/: aead.rs  hash.rs  mod.rs  permutation.rs
src/bignum/: boxed.rs  boxed_montgomery.rs  inverse.rs  mod.rs  modpow.rs  montgomery.rs  mul.rs  prime.rs  uint.rs
src/cipher/: aegis.rs  aez.rs  aez_test_vectors.rs  aria.rs  blowfish.rs  camellia.rs  cbc.rs  ccm.rs  cfb.rs  chacha20.rs  chacha20poly1305.rs  clmul.rs  cmac.rs  ctr.rs  des.rs  gcm.rs  gcm_siv.rs  gmac.rs  kw.rs  mod.rs  ofb.rs  poly1305.rs  salsa20.rs  siv.rs  sm4.rs  xchacha20poly1305.rs  xts.rs
src/cipher/aes/: aes_arm.rs  aesni.rs  gf.rs  mod.rs
src/ct/: eq.rs  mod.rs  ord.rs  select.rs
src/der/: mod.rs  oid.rs  pem.rs  writer.rs
src/dh/: groups.rs  key.rs  key_impl.rs  mod.rs
src/dtls/: ack.rs  client12.rs  client13.rs  cookie.rs  mod.rs  reassembly.rs  record.rs  record13.rs  reliability.rs  reliability13.rs  replay.rs  server12.rs  server13.rs  tests.rs
src/ec/: boxed.rs  curves.rs  ecdh.rs  ecdsa.rs  ed25519.rs  ed448.rs  key_impl.rs  mod.rs  p256.rs  p256_field.rs  p256_gtable.rs  registry.rs  ristretto255.rs  sm2.rs  weierstrass.rs  x25519.rs  x448.rs
src/ec/curve25519/: base_table.rs  field.rs  mod.rs  point.rs  scalar.rs
src/ec/curve448/: field.rs  mod.rs  point.rs  scalar.rs
src/ec/edwards25519/: hazmat.rs  mod.rs
src/ec/secp256k1/: field_backend.rs  group.rs  mod.rs  tests.rs
src/falcon/: encode.rs  fft.rs  fft_tests.rs  fpr.rs  fpr_tests.rs  key_impl.rs  keygen.rs  keygen_tests.rs  mod.rs  sampler.rs  sampler_tests.rs  sign.rs  sign_tests.rs  tests.rs  tree.rs  tree_tests.rs  zint.rs  zint_tests.rs
src/ffi/: cipher.rs  common.rs  crl.rs  csr.rs  ec.rs  hash.rs  kdf.rs  lms.rs  mldsa.rs  mlkem.rs  mod.rs  quic.rs  rng.rs  rsa.rs  slhdsa.rs  sm2.rs  tests.rs  tls.rs  x25519.rs  x509.rs  xmss.rs
src/hash/: blake2.rs  blake3.rs  blake3_simd.rs  block.rs  hmac.rs  k12.rs  keccak.rs  keccak_x4.rs  kmac.rs  md2.rs  md4.rs  md5.rs  mod.rs  ripemd160.rs  sha1.rs  sha256.rs  sha256_mb.rs  sha3.rs  sha512.rs  sha512_mb.rs  sha_hw.rs  shake.rs  simd_x86.rs  sm3.rs  streebog.rs  whirlpool.rs  zeroize.rs
src/hpke/: aead.rs  kdf.rs  kem.rs  labeled.rs  mod.rs  schedule.rs  suite.rs  tests.rs
src/kdf/: argon2.rs  bcrypt_pbkdf.rs  hkdf.rs  kbkdf.rs  mod.rs  pbes2.rs  pbkdf2.rs  scrypt.rs
src/key/: algorithm.rs  decode.rs  error.rs  mod.rs  params.rs  secret.rs  tests.rs
src/lms/: key_impl.rs  mod.rs  ots.rs  params.rs  tests.rs  tree.rs
src/mac/: mod.rs  umac.rs
src/mldsa/: encode.rs  field.rs  hazmat.rs  key_impl.rs  mod.rs  reduce.rs  registry.rs  sample.rs
src/mlkem/: indcpa.rs  kem.rs  key_impl.rs  mod.rs  poly.rs
src/pkcs12/: kdf.rs  mod.rs  pbes2_p12.rs  tests.rs
src/quic/: ack.rs  cid.rs  client.rs  congestion.rs  connection.rs  crypto.rs  crypto_buf.rs  datagram.rs  ecn.rs  endpoint.rs  frame.rs  loss.rs  mod.rs  path.rs  peek.rs  pkt.rs  pn.rs  reset.rs  retry.rs  server.rs  stream.rs  streams.rs  tls_glue.rs  transport_params.rs  varint.rs
src/rng/: hmac_drbg.rs  linux_getrandom.rs  mod.rs  wasm.rs
src/rsa/: boxed.rs  emsa.rs  encoding.rs  key_impl.rs  keys.rs  mod.rs  pkcs1.rs  prime.rs  pss.rs  registry.rs
src/slhdsa/: adrs.rs  hash.rs  key_impl.rs  mod.rs  params.rs  registry.rs
src/tls/: cert_compression.rs  config.rs  connection.rs  error.rs  groups.rs  keylog.rs  mio.rs  mod.rs  peek.rs  quic_hooks.rs  signer.rs  tokio.rs  version.rs
src/tls/codec/: extension.rs  handshake.rs  handshake12.rs  mod.rs  primitives.rs  record.rs
src/x509/: anykey.rs  cert.rs  crl.rs  csr.rs  extension.rs  mod.rs  name.rs  ocsp.rs  privkey.rs  pubkey.rs  sct.rs  signer.rs  time.rs
src/xmss/: adrs.rs  hash.rs  key_impl.rs  mod.rs  params.rs  tests.rs
testdata/: falcon_samplerz.kat  lms_rfc8554.kat  mldsa44_keygen.kat  mldsa44_openssl_pkcs8.hex  mldsa44_siggen.kat  mldsa44_sigver.kat  mldsa65_keygen.kat  mldsa65_openssl_spki.hex  mldsa65_siggen.kat  mldsa65_sigver.kat  mldsa87_keygen.kat  mldsa87_siggen.kat  mldsa87_sigver.kat  mlkem1024_decap.kat  mlkem1024_encap.kat  mlkem1024_keygen.kat  mlkem512_decap.kat  mlkem512_encap.kat  mlkem512_keygen.kat  mlkem768_decap.kat  mlkem768_encap.kat  mlkem768_keygen.kat  mlkem768_openssl_ct.hex  mlkem768_openssl_pkcs8.hex  mlkem768_openssl_spki.hex  pkcs12_openssl3_default.p12  pkcs12_openssl_legacy_3des.p12  pkcs12_test_cert.der  pkcs12_test_key.pk8.der  rfc8448_client_hello.hex  rfc8448_server_flight_payload.hex  rfc8448_server_flight_record.hex  rfc8448_server_hello.hex  slhdsa_keygen.kat  slhdsa_siggen.kat  slhdsa_sigver.kat  xmss_kat.kat
tests/: cli.rs  ffi_dtls_smoke.c  ffi_quic_smoke.c  ffi_smoke.c  ffi_tls_smoke.c  mio_surface.rs  tokio_surface.rs
web/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
web/public/: robots.txt  sitemap.xml
web/scripts/: dom-smoke.mjs  smoke.mjs  testcert.pem
web/src/: App.vue  main.js  store.js
(+57 files in other folders)
