[package]
name = "purecrypto"
version = "0.0.5"
edition = "2024"
rust-version = "1.95"
description = "A pure-Rust cryptography toolkit with no foreign-code dependencies, from constant-time primitives up to keys, X.509 and TLS."
repository = "https://github.com/KarpelesLab/purecrypto"
license = "MIT"
keywords = ["crypto", "cryptography", "no-std", "constant-time"]
categories = ["cryptography", "no-std::no-alloc"]

[lib]
name = "purecrypto"

[features]
# `std` is the convenient default; it implies `alloc`. Disable default
# features for a `no_std` build (`--no-default-features`), optionally
# re-enabling `alloc` for heap-backed types.
default = ["std", "hash", "cipher", "kdf", "bignum", "rng", "rsa", "der", "x509", "ec", "tls", "mlkem", "mldsa", "slhdsa", "cli"]
std = ["alloc"]
alloc = []

# --- module gates (added as each layer lands) ---
hash = []
cipher = []
kdf = ["hash", "cipher"]
bignum = []
rng = ["hash"]
rsa = ["bignum", "rng", "hash"]
der = []
x509 = ["der", "rsa", "hash", "alloc", "ec"]
ec = ["bignum", "rng", "hash", "alloc"]
tls = ["cipher", "hash", "kdf", "ec", "rsa", "x509", "der", "rng", "mlkem", "alloc"]
# ML-KEM-768 (FIPS 203). no_std + no-alloc core: only hashing (SHA-3/SHAKE) and
# the RNG trait are required.
mlkem = ["hash", "rng"]
# ML-DSA (FIPS 204) signatures. Needs alloc for the variable-width signature
# encoding; the polynomial arithmetic itself is on the stack.
mldsa = ["hash", "rng", "alloc"]
# SLH-DSA (FIPS 205) hash-based signatures. Needs alloc for the large
# signatures (up to ~50 KB); built purely from the hash primitives.
slhdsa = ["hash", "rng", "alloc"]
# C ABI: builds the `ffi` module (the only place `unsafe` is allowed). Build a
# C library with `cargo rustc --features ffi --crate-type cdylib` (or staticlib).
ffi = ["std", "hash", "rng", "rsa", "ec", "der", "x509"]
# The `purecrypto` command-line tool (gates the binary target below).
cli = ["std", "hash", "rng", "rsa", "ec", "der", "x509", "tls", "kdf", "cipher"]

[[bin]]
name = "purecrypto"
path = "src/bin/purecrypto/main.rs"
required-features = ["cli"]

[lints.rust]
# Constant-time correctness depends on disciplined arithmetic; keep the
# foundation honest.
missing_docs = "warn"
unreachable_pub = "warn"
# Deny (not forbid) so a future `ffi`/SIMD module can opt back in locally
# with a scoped `#[allow(unsafe_code)]`; the core stays safe.
unsafe_code = "deny"

[profile.release]
# Crypto code benefits from aggressive inlining of the small primitive ops.
lto = "thin"
